[package]
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'IPS Pallet for creating and managing sets of tokenized IP'
edition = '2018'
homepage = 'https://invarch.io'
license = 'GPLv3'
name = 'pallet-smartip'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/smartip'
version = '0.1.0-dev'

[dependencies]
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

scale-info = { version = "1.0.0", features = ["derive"], default-features = false }

# InvArch dependencies
primitives = { package = "invarch-primitives", path = "../../primitives", default-features = false }
ips = { package = "pallet-ips", path = "../pallet-ips", default-features = false }
ipf = { package = "pallet-ipf", path = "../pallet-ipf", default-features = false }


sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17", default-features = false }

pallet-contracts-primitives = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.17" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.17" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
  "sp-io/std",
  "scale-info/std",
  "pallet-contracts/std",
  "pallet-balances/std",
  "ips/std",
  "ipf/std",
  "pallet-contracts-primitives/std"
]
try-runtime = ["frame-support/try-runtime"]

