[package]
name = 'pallet-ocif-staking'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'FRAME pallet for OCIF staking'
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.140", features = ["derive"], optional = true }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
num-traits = { version = "0.2", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.43" }
pallet-session = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true , branch = "polkadot-v0.9.43" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
sp-staking = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "polkadot-v0.9.43" }

pallet-inv4 = { path = "../../INV4/pallet-inv4", default-features = false }

frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', default-features = false, optional = true , branch = "polkadot-v0.9.43" }

[dev-dependencies]
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "7ecebeab7e3dbc2226ed58d32ee159271a8176ae" }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", default-features = false, rev = "7ecebeab7e3dbc2226ed58d32ee159271a8176ae" }
xcm = { git = "https://github.com/paritytech/polkadot", default-features = false , branch = "release-v0.9.43" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-staking/std",
  "orml-traits/std",
  "orml-tokens/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
