[package]
name = 'pallet-ocif-staking'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'FRAME pallet for OCIF staking'
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {workspace = true}
scale-info = {workspace = true}
serde = {workspace = true, optional = true }

frame-support = {workspace = true}
frame-system = {workspace = true}
num-traits = {workspace = true}
pallet-balances = {workspace = true, optional = true }
pallet-session = {workspace = true}
pallet-timestamp = {workspace = true, optional = true }
sp-arithmetic = {workspace = true}
sp-core = {workspace = true}
sp-io = {workspace = true}
sp-runtime = {workspace = true}
sp-staking = {workspace = true}
sp-std = {workspace = true}

pallet-inv4 = { path = "../../INV4/pallet-inv4", default-features = false }

frame-benchmarking = {workspace = true, optional = true }

[dev-dependencies]
orml-traits = {workspace = true}
orml-tokens = {workspace = true}
xcm = {workspace = true}

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"scale-info/std",
	"num-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-arithmetic/std",
	"sp-io/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-session/std",
	"pallet-timestamp/std",
	"sp-staking/std",
  "orml-traits/std",
  "orml-tokens/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
