[package]
name = 'pallet-ocif-staking'
authors = ['InvArchitects <https://github.com/InvArch>']
description = 'FRAME pallet for OCIF staking'
edition = '2021'
homepage = 'https://invarch.network'
license = 'GPLv3'
repository = 'https://github.com/InvArch/InvArch-Pallet-Library/'
version = '0.1.0-dev'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true }

frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false, optional = true }
pallet-message-queue = { workspace = true, default-features = false}
pallet-session = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false, optional = true }
sp-arithmetic = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-staking = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

pallet-inv4 = { path = "../../INV4/pallet-inv4", default-features = false }

frame-benchmarking = { workspace = true, default-features = false, optional = true }

[dev-dependencies]
cumulus-primitives-core = { workspace = true, default-features = false }
orml-traits = { workspace = true, default-features = false }
orml-tokens = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "scale-info/std",
    "num-traits/std",
    "cumulus-primitives-core/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-arithmetic/std",
    "sp-io/std",
    "sp-std/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking?/std",
    "xcm/std",
    "pallet-balances/std",
    "pallet-message-queue/std",
    "pallet-session/std",
    "pallet-timestamp/std",
    "pallet-inv4/std",
    "sp-staking/std",
    "orml-traits/std",
    "orml-tokens/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-inv4/runtime-benchmarks",
    "pallet-message-queue/runtime-benchmarks",

]
try-runtime = ["frame-support/try-runtime"]
