[package]
name = "invarch-node"
version.workspace = true
authors.workspace = true
description = "A Substrate-based InvArch Node."
license.workspace = true
homepage.workspace = true
publish = false
repository.workspace = true
edition.workspace = true
build = "build.rs"

# [package.metadata.docs.rs]
# targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "invarch-collator"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }
codec = { workspace = true }
serde = { workspace = true }
hex-literal = { workspace = true }
async-trait = { workspace = true }

## RPC related Dependencies
jsonrpsee = { workspace = true }
futures = { workspace = true }

## Local Dependencies
invarch-runtime = { path = "../runtime" }


## Substrate Dependencies
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }

## Substrate Client Dependencies
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-manual-seal = { workspace = true }
sc-executor = { workspace = true }
sc-keystore = { workspace = true }
sc-network = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }

## Substrate Primitive
sp-api = { workspace = true }
sp-io = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-keystore = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-timestamp = { workspace = true }
sp-transaction-pool = { workspace = true }

substrate-frame-rpc-system = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }
try-runtime-cli = { workspace = true, optional = true }

## Polkadot dependencies Dependencies
polkadot-cli = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-primitives = { workspace = true }
polkadot-service = { workspace = true }
xcm = { workspace = true }

## Cumulus dependencies Dependencies
cumulus-client-cli = { workspace = true }
cumulus-client-collator = { workspace = true }
cumulus-client-consensus-aura = { workspace = true }
cumulus-client-consensus-common = { workspace = true }
cumulus-client-network = { workspace = true }
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-parachain-inherent = { workspace = true }
cumulus-relay-chain-inprocess-interface = { workspace = true }
cumulus-relay-chain-interface = { workspace = true }
cumulus-relay-chain-minimal-node = { workspace = true }
cumulus-relay-chain-rpc-interface = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
runtime-benchmarks = [
    "invarch-runtime/runtime-benchmarks",
    "polkadot-cli/runtime-benchmarks"
    ]

try-runtime = [
    "invarch-runtime/try-runtime",
    "try-runtime-cli",
]
