[package]
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
name = "invarch-runtime"
publish = false
repository.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true }

[dependencies]
codec = { workspace = true }
docify = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
scale-info = { workspace = true }
smallvec = { workspace = true }

# InvArch/local
pallet-checked-inflation = { workspace = true }
pallet-dao-manager = { workspace = true }
pallet-dao-staking = { workspace = true }
new-modified-construct-runtime = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true, optional = true }
frame-executive = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-benchmarking = { workspace = true, optional = true }
frame-system-rpc-runtime-api = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-aura = { workspace = true }
pallet-authorship = { workspace = true }
pallet-balances = { workspace = true }
pallet-contracts = { workspace = true }
pallet-identity = { workspace = true }
pallet-insecure-randomness-collective-flip = { workspace = true }
pallet-message-queue = { workspace = true }
pallet-session = { workspace = true }
pallet-sudo = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }
pallet-treasury = { workspace = true }
pallet-tx-pause = { workspace = true }
pallet-utility = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-core = { workspace = true }
sp-genesis-builder = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# ORML
orml-asset-registry = { workspace = true }
orml-currencies = { workspace = true }
orml-xcm = { workspace = true }
orml-vesting = { workspace = true }
orml-traits = { workspace = true }
orml-traits2 = { workspace = true }
orml-tokens = { workspace = true }
orml-tokens2 = { workspace = true }
orml-xtokens = { workspace = true }
orml-xcm-support = { workspace = true }

# Polkadot
pallet-xcm = { workspace = true }
polkadot-parachain = { workspace = true }
polkadot-runtime-common = { workspace = true }
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# Cumulus
cumulus-pallet-aura-ext = { workspace = true }
cumulus-pallet-dmp-queue = { workspace = true }
cumulus-pallet-parachain-system = { workspace = true }
cumulus-pallet-session-benchmarking = { workspace = true }
cumulus-pallet-xcm = { workspace = true }
cumulus-pallet-xcmp-queue = { workspace = true }
cumulus-primitives-aura = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-timestamp = { workspace = true }
cumulus-primitives-utility = { workspace = true }
pallet-collator-selection = { workspace = true }
parachain-info = { workspace = true }

[features]

metadata-hash = ["substrate-wasm-builder/metadata-hash"]

default = ["std"]

on-chain-release-build = ["metadata-hash"]

std = [
	"codec/std",
	"cumulus-pallet-aura-ext/std",
	"cumulus-pallet-dmp-queue/std",
	"cumulus-pallet-parachain-system/std",
	"cumulus-pallet-xcm/std",
	"cumulus-pallet-xcmp-queue/std",
	"cumulus-primitives-aura/std",
	"cumulus-primitives-core/std",
	"cumulus-primitives-timestamp/std",
	"cumulus-primitives-utility/std",
	"frame-benchmarking?/std",
	"frame-executive/std",
	"frame-metadata-hash-extension/std",
	"frame-support/std",
	"frame-system-benchmarking?/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"frame-try-runtime?/std",
	"log/std",
	"new-modified-construct-runtime/std",
	"orml-asset-registry/std",
	"orml-currencies/std",
	"orml-tokens/std",
	"orml-tokens2/std",
	"orml-traits2/std",
	"orml-vesting/std",
	"orml-xcm-support/std",
	"orml-xcm/std",
	"orml-xtokens/std",
	"pallet-aura/std",
	"pallet-authorship/std",
	"pallet-balances/std",
	"pallet-checked-inflation/std",
	"pallet-collator-selection/std",
	"pallet-contracts/std",
	"pallet-dao-manager/std",
	"pallet-dao-staking/std",
	"pallet-identity/std",
	"pallet-insecure-randomness-collective-flip/std",
	"pallet-message-queue/std",
	"pallet-session/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-treasury/std",
	"pallet-tx-pause/std",
	"pallet-utility/std",
	"pallet-xcm/std",
	"parachain-info/std",
	"polkadot-parachain/std",
	"polkadot-runtime-common/std",
	"scale-info/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-genesis-builder/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]

runtime-benchmarks = [
	"cumulus-pallet-session-benchmarking/runtime-benchmarks",
	"cumulus-pallet-xcmp-queue/runtime-benchmarks",
	"cumulus-primitives-core/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-checked-inflation/runtime-benchmarks",
	"pallet-collator-selection/runtime-benchmarks",
	"pallet-dao-manager/runtime-benchmarks",
	"pallet-dao-staking/runtime-benchmarks",
	"pallet-identity/runtime-benchmarks",
	"pallet-message-queue/runtime-benchmarks",
	"pallet-sudo/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-utility/runtime-benchmarks",
	"pallet-xcm/runtime-benchmarks",
	"polkadot-parachain/runtime-benchmarks",
	"polkadot-runtime-common/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]

try-runtime = [
	"cumulus-pallet-aura-ext/try-runtime",
	"cumulus-pallet-dmp-queue/try-runtime",
	"cumulus-pallet-parachain-system/try-runtime",
	"cumulus-pallet-xcm/try-runtime",
	"cumulus-pallet-xcmp-queue/try-runtime",
	"frame-executive/try-runtime",
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"frame-try-runtime/try-runtime",
	"orml-asset-registry/try-runtime",
	"orml-currencies/try-runtime",
	"orml-tokens/try-runtime",
	"orml-tokens2/try-runtime",
	"orml-vesting/try-runtime",
	"orml-xcm/try-runtime",
	"orml-xtokens/try-runtime",
	"pallet-aura/try-runtime",
	"pallet-authorship/try-runtime",
	"pallet-balances/try-runtime",
	"pallet-checked-inflation/try-runtime",
	"pallet-collator-selection/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-dao-manager/try-runtime",
	"pallet-dao-staking/try-runtime",
	"pallet-identity/try-runtime",
	"pallet-insecure-randomness-collective-flip/try-runtime",
	"pallet-message-queue/try-runtime",
	"pallet-session/try-runtime",
	"pallet-sudo/try-runtime",
	"pallet-timestamp/try-runtime",
	"pallet-transaction-payment/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-tx-pause/try-runtime",
	"pallet-utility/try-runtime",
	"pallet-xcm/try-runtime",
	"parachain-info/try-runtime",
	"polkadot-runtime-common/try-runtime",
	"sp-runtime/try-runtime",
]
